--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
-<body class="  d-flex justify-content-center align-items-center 
+<body class=" pt-5 pt-md-0  d-flex justify-content-center align-items-center 
 ">
-    <div class="cards d-flex flex-wrap justify-content-center align-items-center gap-5 mt-3
+    <div class="cards d-flex flex-wrap justify-content-center align-items-center gap-5 pt-5 pt-md-0
     ">
     <!-- <div class="holo-card-parent">
         <div class="holo-card ">
